syntax = "proto3";

option go_package = "github.com/iakigarci/real-time-messaging/ws-consumer/api/proto";

package auth;

service AuthService {
  rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenResponse) {}
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message GenerateTokenRequest {
  string email = 1;
}

message GenerateTokenResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
}
